# forest

./: .gitignore  LICENSE  README.md  cleanup.py  pyproject.toml
src/forest/: __init__.py  cli.py  config.py  main.py  models.py
src/forest/db/: __init__.py  base.py  sqlite.py
src/forest/frontend/static/: manifest.json
src/forest/frontend/templates/: base.html  book.html  index.html  library.html  onboarding.html  settings.html  stats.html  tierlist.html
src/forest/routers/: __init__.py  books.py  settings.py  shelves.py  tags.py
src/forest/services/: __init__.py  hardcover.py  openlibrary.py  settings_service.py
